# zk-houdini

./: .gitignore  CONTEXT.md  LICENSE  NOTICE  README.md  skills-lock.json
docs/: RUNBOOK-e2e.md
docs/adr/: 0001-trust-model-privacy-trustless-backing-trusted.md  0002-unlinkable-multi-denomination-shielded-pool.md  0003-zk-stack-circom-groth16-bls12-381.md  0004-flip-to-bn254-onchain-evm-tree.md
docs/superpowers/plans/: 2026-06-14-zk-private-bridge.md  2026-06-19-relayer-rpc-and-proof-convert.md  2026-06-19-relayer-services.md  2026-06-25-proofreceipt-m2.md  2026-06-27-proofreceipt-m3.md
docs/superpowers/specs/: 2026-06-19-relayer-rpc-chunking-and-proof-converter-design.md  2026-06-19-relayer-services-design.md  2026-06-25-proofreceipt-m1-design.md  2026-06-25-proofreceipt-m2-design.md
evm-tree/: foundry.toml
evm-tree/cache/: solidity-files-cache.json
evm-tree/src/: MerkleTreeWithHistory.sol
evm-tree/test/: MerkleTreeWithHistory.t.sol
frontend/: .gitignore
frontend/scripts/: copy-circuit-artifacts.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(home)/: page.tsx
frontend/src/app/deposit/: page.tsx
frontend/src/app/withdraw/: page.tsx
frontend/src/components/site/: brand.tsx  cta-button.tsx  filing-grid.tsx  glass-nav.tsx  glow-orb.tsx  grain-overlay.tsx  hero.tsx  network-pill.tsx  redacted-link.tsx  reveal.tsx  section.tsx  top-bar.tsx  wallet-status.tsx
frontend/src/lib/: site.ts  use-anim.ts
frontend/src/lib/crypto/: note.test.ts  note.ts  poseidon2.test.ts  poseidon2.ts
frontend/src/lib/evm/: abis.ts  client.ts  (+3 more)
legacy/: README.md
legacy/artifacts/circuit/: .gitignore  proof.json  public.json  soroban_verify_our_proof.test.rs.txt  verification_key.json
legacy/circuits/: CIRCUIT_RESULTS.md  package-lock.json  package.json
legacy/circuits/scripts/: gen_input.py
legacy/circuits/src/: merkle.circom  withdraw.circom
legacy/deployments/: testnet.env  testnet.spike.env
legacy/evm-tree/: .gitignore  DEPLOYMENTS.md
legacy/evm-tree/cache/: solidity-files-cache.json
legacy/evm-tree/script/: Deploy.s.sol
legacy/evm-tree/src/: IHasher.sol  MerkleTreeWithHistory.sol  MockUSDC.sol  Poseidon2.sol  PrivacyPoolDeposit.sol
legacy/evm-tree/test/: Integration.t.sol  MockUSDC.t.sol  Poseidon2.t.sol  PrivacyPoolDeposit.t.sol
legacy/relayer/: .gitignore
legacy/relayer/src/: config.rs  evm.rs  lib.rs  merkle.rs  pathsvc.rs  soroban.rs  withdrawal.rs
legacy/relayer/tests/: evm_decode.rs  idempotency.rs  merkle_root.rs  proofconv.rs
legacy/soroban/: README.md
legacy/soroban/contracts/bridge-pool/: Cargo.toml
legacy/soroban/contracts/bridge-pool/src/: storage.rs
legacy/spike/: SPIKE_RESULTS.md  keystone_rust.rs.txt  poseidon2_vectors.json
legacy/spike/circom/: input.json  keystone.circom  keystone.sym  witness.json
proofreceipt-buyer/: .env.example  DEMO.md  claude_desktop_config.example.json  package.json  run-escrow-e2e.sh
proofreceipt-buyer/scripts/: capture.mjs  setup-testnet.sh
proofreceipt-buyer/src/: buyer.ts  escrow-run.ts  escrow.test.ts  escrow.ts  verdict.test.ts  verdict.ts  verify.ts
proofreceipt-contract/contract/: Cargo.toml
proofreceipt-contract/contract/src/: error.rs  lib.rs  storage.rs  test.rs
proofreceipt-contract/scripts/: e2e_testnet.sh
proofreceipt-m0/: .gitignore  README.md
proofreceipt-m0/host/: Cargo.toml
proofreceipt-m0/host/src/: main.rs
proofreceipt-m0/host/tests/: policy_journal.rs
proofreceipt-m0/methods/guest/: Cargo.toml
proofreceipt-m0/methods/guest/src/: main.rs
proofreceipt-m0/methods/guest/wasm-policy/src/: policy.rs
proofreceipt-server/: .gitignore  Cargo.toml  RUNBOOK.md  proofreceipt-server.example.toml
proofreceipt-server/src/: audit.rs  config.rs  escrow.rs  facilitator.rs  job.rs  lib.rs  main.rs  x402.rs
proofreceipt-server/tests/: wire_fixtures.rs
proofreceipt-server/tests/fixtures/: payment_payload.json  supported.json  verify_invalid.json
relayer/: Cargo.toml  README.md  config.example.toml
relayer/scripts/: e2e_smoke.sh
relayer/src/: backing.rs  config.rs  evm.rs  lib.rs  main.rs  poseidon.rs  proofconv.rs  soroban.rs  state.rs  withdrawal.rs
relayer/tests/: config_and_parse.rs  evm_decode.rs  merkle_root.rs  poseidon_parity.rs  withdrawal_request.rs
(+37 files in other folders)
