[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
ark-ff = "0.6"
# C3: same Poseidon2 as circuit/keystone — vendored zkhash (instances _2/_3).
zkhash = { path = "../vendor/stellar-private-payments/poseidon2" }
# Lightweight relayer deps (MVP: avoids the heavy alloy/axum/tokio compile).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
ureq = { version = "2", features = ["json"] }
tiny-keccak = { version = "2", features = ["keccak"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
